--- a/ebpf/Makefile
+++ b/ebpf/Makefile
@@ -24,7 +24,8 @@ $(BPF_OBJ): %.o: %.c vmlinux.h
 vmlinux.h:
 	bpftool btf dump file /sys/kernel/btf/vmlinux format c > vmlinux.h		
 
-
+build-throttler:
+	clang -g -O2 -I/usr/include/aarch64-linux-gnu -Wall -target bpf -c throttle.bpf.c -o throttle.o
 
 rtarg = dnspkt
 direction = ingress
