ms8.2 - usability and documentation improvements
* Revamp documentation to reflect somewhat easier installation process
  using new single-binary builds
* Add strategy target for rockchip64 devices so we're not dependent on
  older kernel builds from the armbian-btf-kernel repo
* Clean up unneeded dependences from image build and set up most items
  to run on reboot automatically
* Small issue fixes here and there

--- a/.github/workflows/build-btf-kernel.yml
+++ b/.github/workflows/build-btf-kernel.yml
@@ -34,10 +34,10 @@ jobs:
             - boardfamily: sunxi
               branch: legacy
               representative: orangepi-r1
-            # TODO Enable for R1plus and others as needed
-            # - boardfamily: rockchip64
-            #   branch: current
-            #   representative: rockpro64
+            # TODO Enable for others as needed
+            - boardfamily: rockchip64
+              branch: legacy
+              representative: orangepi-r1plus
         fail-fast: false
     env:
       BOARD_FAMILY: ${{ matrix.boardfamily }}
